--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,11 +12,12 @@ plugins {
     id "io.github.krakowski.jextract" version "0.5.0"
 }
 
-project.ext.lwjglVersion = "3.3.6"
+project.ext.lwjglVersion = "3.4.0-SNAPSHOT"
 project.ext.lwjglNatives = "natives-macos-arm64"
 
 repositories {
     mavenCentral()
+    maven { url "https://central.sonatype.com/repository/maven-snapshots" }
 }
 
 dependencies {
@@ -25,7 +26,6 @@ dependencies {
     implementation "org.lwjgl:lwjgl"
     implementation "org.lwjgl:lwjgl-assimp"
     implementation "org.lwjgl:lwjgl-bgfx"
-    implementation "org.lwjgl:lwjgl-cuda"
     implementation "org.lwjgl:lwjgl-egl"
     implementation "org.lwjgl:lwjgl-fmod"
     implementation "org.lwjgl:lwjgl-freetype"
@@ -35,11 +35,9 @@ dependencies {
     implementation "org.lwjgl:lwjgl-jawt"
     implementation "org.lwjgl:lwjgl-jemalloc"
     implementation "org.lwjgl:lwjgl-ktx"
-    implementation "org.lwjgl:lwjgl-libdivide"
     implementation "org.lwjgl:lwjgl-llvm"
     implementation "org.lwjgl:lwjgl-lmdb"
     implementation "org.lwjgl:lwjgl-lz4"
-    implementation "org.lwjgl:lwjgl-meow"
     implementation "org.lwjgl:lwjgl-meshoptimizer"
     implementation "org.lwjgl:lwjgl-msdfgen"
     implementation "org.lwjgl:lwjgl-nanovg"
@@ -54,7 +52,9 @@ dependencies {
     implementation "org.lwjgl:lwjgl-par"
     implementation "org.lwjgl:lwjgl-remotery"
     implementation "org.lwjgl:lwjgl-rpmalloc"
+    implementation "org.lwjgl:lwjgl-sdl"
     implementation "org.lwjgl:lwjgl-shaderc"
+    implementation "org.lwjgl:lwjgl-spng"
     implementation "org.lwjgl:lwjgl-spvc"
     implementation "org.lwjgl:lwjgl-stb"
     implementation "org.lwjgl:lwjgl-tinyexr"
@@ -73,11 +73,9 @@ dependencies {
     implementation "org.lwjgl:lwjgl-hwloc::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-jemalloc::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-ktx::$lwjglNatives"
-    implementation "org.lwjgl:lwjgl-libdivide::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-llvm::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-lmdb::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-lz4::$lwjglNatives"
-    implementation "org.lwjgl:lwjgl-meow::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-meshoptimizer::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-msdfgen::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-nanovg::$lwjglNatives"
@@ -90,7 +88,9 @@ dependencies {
     implementation "org.lwjgl:lwjgl-par::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-remotery::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-rpmalloc::$lwjglNatives"
+    implementation "org.lwjgl:lwjgl-sdl::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-shaderc::$lwjglNatives"
+    implementation "org.lwjgl:lwjgl-spng::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-spvc::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-stb::$lwjglNatives"
     implementation "org.lwjgl:lwjgl-tinyexr::$lwjglNatives"
@@ -103,11 +103,6 @@ dependencies {
 
     // https://mvnrepository.com/artifact/org.bytedeco/javacpp
     implementation group: 'org.bytedeco', name: 'javacpp', version: '1.5.12'
-}
-
-repositories {
-    // Use Maven Central for resolving dependencies.
-    mavenCentral()
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
